refactor: apply git patches on codebase.